# job-applicator

./: .gitignore  CLAUDE.md  PLAN.md  README.md  apply.py  example.preferences.md  pyproject.toml  requirements.txt  setup.sh
.claude/skills/job-applicator/: SKILL.md
.github/workflows/: ci.yml
CL/: coverletter-example.tex
CV/: CV-example.tex
prompts/: adapt_cl.txt  adapt_cv.txt  analyse.txt  batch_scan.txt  report.txt
stages/: _browser.py  _client.py  adapt.py  analyse.py  ats_patterns.json  batch.py  display.py  ingest.py  log.py  orchestrate.py  report.py  verify.py
tests/: test_helpers.py  test_orchestrate.py  test_stages.py
